@@ -1,3 +1,9 @@
+2006-09-25  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py (KickstartHandlers.doMethod):  Add support for
+	--biospart option (#207585).
+	* pykickstart/writer.py (KickstartWriter.doMethod):  Likewise.
+
 2006-09-20  Jeremy Katz  <katzj@redhat.com>
 
 	* pykickstart.spec, setup.py: Bump version
